Bug 431004 - Screen sharing non-functional at meet.jit.si (Jitsi Meet)
Summary: Screen sharing non-functional at meet.jit.si (Jitsi Meet)
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: FreeBSD Ports FreeBSD
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL: https://meet.jit.si/
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-31 12:55 UTC by Graham Perrin
Modified: 2021-04-05 16:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The required dialogue in Firefox 84.0.1 (153.69 KB, image/png)
2020-12-31 12:55 UTC, Graham Perrin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Graham Perrin 2020-12-31 12:55:59 UTC
Created attachment 134416 [details]
The required dialogue in Firefox 84.0.1

SUMMARY

Clicks on the 'Share your screen' button seem to have no effect.

STEPS TO REPRODUCE

1. https://meet.jit.si/
2. start a meeting
3. allow devices
4. join the meeting
5. click the 'Share your screen' button

OBSERVED RESULT

6. nothing (as if the button was not clicked)

EXPECTED RESULT

6. a dialogue through which a window or screen can be selected.

SOFTWARE/OS VERSIONS

Operating System: FreeBSD 13.0
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Kernel Version: 13.0-CURRENT
OS Type: 64-bit
Memory: 15.9 GiB of RAM
Graphics Processor: AMD TURKS

ADDITIONAL INFORMATION

grahamperrin@mowa219-gjp4-8570p:~ % date ; uname -v
Thu 31 Dec 2020 12:49:14 GMT
FreeBSD 13.0-CURRENT #74 r368589: Sun Dec 13 07:55:46 GMT 2020     root@mowa219-gjp4-8570p:/usr/obj/usr/src/amd64.amd64/sys/GENERIC-NODEBUG 
grahamperrin@mowa219-gjp4-8570p:~ % pkg query '%o %v %R' falkon
www/falkon 3.1.0 FreeBSD
grahamperrin@mowa219-gjp4-8570p:~ %
Comment 1 Graham Perrin 2020-12-31 13:01:10 UTC
Cross reference: 

bug 419206 – Konqueror not present menu to select devices in jitsi
Comment 2 Klaus-Dieter Fietze 2021-03-04 19:15:02 UTC
I am experiencing the same behaviour with Falkon as well as with Konqueor, whereas Firefox works as expected.

Operating System: openSUSE Tumbleweed 20210302
KDE Plasma Version: 5.21.1
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Kernel Version: 5.10.16-1-default
OS Type: 64-bit
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-7700T CPU @ 2.90GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 630

Would be nice to find a solution in order to abandon Firefox & Co.
Thank you,
Klaus
Comment 3 Bug Janitor Service 2021-04-03 19:53:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/18
Comment 4 Juraj 2021-04-03 19:54:48 UTC
Hello,

Screen sharing is supported by QtWebEngine 5.10+

BUT Falkon does NOT have support for it and will not throw the right notification when this is requested.

Working on adding the support for these, will be done in few days (since my powerful machine is out of reach at the moment).
Comment 5 Juraj 2021-04-05 15:55:41 UTC
Git commit f7b372098ed687e9de123c3f6c3c59b066ea6c9d by Juraj Oravec.
Committed on 05/04/2021 at 15:54.
Pushed by jurajo into branch 'feature/screen-capture'.

Implement QtWE ScreenCaptureEnabled option

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +1    -0    src/lib/app/mainapplication.cpp
M  +4    -0    src/lib/preferences/preferences.cpp
M  +7    -0    src/lib/preferences/preferences.ui

https://invent.kde.org/network/falkon/commit/f7b372098ed687e9de123c3f6c3c59b066ea6c9d
Comment 6 Juraj 2021-04-05 15:55:50 UTC
Git commit fb0398911466f3188faa4ff5564403f3f01fe5e5 by Juraj Oravec.
Committed on 05/04/2021 at 15:40.
Pushed by jurajo into branch 'feature/screen-capture'.

Implement html5 permissions for screen sharing

Introduced in QtWebEngine 5.10

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +31   -0    src/lib/tools/html5permissions/html5permissionsdialog.cpp
M  +10   -0    src/lib/tools/html5permissions/html5permissionsdialog.ui
M  +18   -0    src/lib/tools/html5permissions/html5permissionsmanager.cpp
M  +11   -0    src/lib/tools/html5permissions/html5permissionsnotification.cpp

https://invent.kde.org/network/falkon/commit/fb0398911466f3188faa4ff5564403f3f01fe5e5
Comment 7 Graham Perrin 2021-04-05 16:20:38 UTC
Thank you 👍

Re <https://www.freshports.org/www/falkon/#packages> I'll test after the fix reaches FreeBSD:14:amd64