Implement html5 permissions for screen sharing

Introduced in QtWebEngine 5.10

BUG: 431004

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>